--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.848.0",
     "@aws-sdk/s3-request-presigner": "^3.848.0",
-    "@daveyplate/better-auth-ui": "^2.0.14",
+    "@hookform/resolvers": "^5.2.2",
     "@polar-sh/better-auth": "^1.0.7",
     "@polar-sh/sdk": "^0.34.6",
     "@prisma/client": "^6.5.0",
@@ -39,8 +39,10 @@
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@react-email/components": "^0.5.6",
     "@t3-oss/env-nextjs": "^0.12.0",
-    "better-auth": "^1.2.12",
+    "@tabler/icons-react": "^3.35.0",
+    "better-auth": "^1.3.27",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.2",
@@ -51,9 +53,12 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.65.0",
+    "react-icons": "^5.5.0",
+    "resend": "^6.1.2",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
-    "zod": "^3.24.2",
+    "zod": "^3.25.76",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
